--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -12,6 +12,15 @@
     height: 400px;
 }
 
+.subpoints {
+    margin-left: 10px;
+    padding: 8px;
+}
+
+.refs {
+    padding: 5px;
+}
+
  @media screen and (max-width: 750px) {
     .img1 {
        height: 400px;
