--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -12,6 +12,14 @@
     height: 400px;
 }
 
+.img3 {
+    height: 250px;
+}
+
+.img4 {
+    height: 800px;
+}
+
 .subpoints {
     margin-left: 10px;
     padding: 8px;
@@ -28,5 +36,13 @@
 
     .img2 {
         height: 260px;
+    }
+
+    .img3 {
+        height: 100px;
+    }
+
+    .img4 {
+        height: 500px;
     }
  }
